Cibyl (20)
	* Fixed bug caused by removing some stores of s-registers in function
	porlogues/epilogues without checking if they were in use (thanks
	Ehud). Added test case for this and made the optimization optional
	(enabled via -O or --optimize-prune-stack-stores)

	* setjmp/longjmp has been implemented, the last missing big C
	functionality

	* Implemented NOPH_throw(), as a builtin, to throw exceptions

	* Try/catch handling has been reimplemented. The new implementation is
	based on a stack to handle nested try/catches and supports catching
	specific classes. It allows for the adding of setjmp/longjmp support

	* 64-bit div and mod are handled as builtins now (as suggested by
	Susmith M R)

	* Do not automatically invoke the python translator on -O

	-- Simon Kagstrom <simon.kagstrom@gmail.com>, Sun Oct 26 09:41:20 CET 2008

Cibyl (19)
	* Implemented FileInputStream/FileOutputStream handling in libj2se
	(new library). This allows file handling from J2SE as well and added
	an example in examples/host-java/file-ops 

	* Always export main - in crt0.S it's defined as an empty function
	with weak linkage. If it's defined elsewhere, that version will be
	used instead.

	* Reorganized examples into J2ME and non-J2ME parts, and added an
	example which shows how to export a library to Java

	* Split startup (from start.o) - this is now split in one call to
	initialize (and run global constructors), start main() and then to run
	global destructors. The NOPH_GameCanvas_get have also changed to
	NOPH_Canvas_get (with an inlined function to get the original one),
	and these objects are registered from the Java file.

	* Don't mark streams (causes problems on Nokia devices)

	* strncmp off-by-one bug fixed (Ehud Shabtai)

	* The C++ translator Makefile now handles proper dependencies

	* Implemented function colocation in methods for the C++
	translator. All important optimizations from the Python translator
	have now been implemented in the C++ ditto
